cluster/applications/cloud/immich/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-body-size-limit
  namespace: cloud
spec:
  buffering:
    maxRequestBodyBytes: 1073741824 # 1GB
