cluster/applications/cloud/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: cloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: cloud-immich-headers@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: immich
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - photos.cliff.li
    secretName: photos-tls
  rules:
  - host: photos.cliff.li
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 2283
